# siril

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CITATION.cff  CONTRIBUTING.md  COVERITY_TRIAGE_covfixes15.md  ChangeLog  Makefile.am  NEWS  README.md  configure.ac  flis_gtk4_plan.md  gui-separation-plan.txt  meson.build  meson_options.txt  mpp_improve.md  phase_7_4_benchmark.txt  pss_port_plan.md  securescripts-spec.md  siril.1  siril_notifications.json  siril_resource.xml  sirilpy_naitveendian.md  update-resource  uv-conversion-plan.md
data/: Makefile.am  caldwell.csv  constellations.csv  constellationsnames.csv  ic.csv  ldn.csv  meson.build  messier.csv  messier.txt  ngc.csv  sh2.csv  stars.csv
icc/: Gray-siril-V2-g22.icc  Gray-siril-V4-g10.icc  Gray-siril-V4-g22.icc  Makefile.am  meson.build  sRGB-siril-V2-g22.icc  sRGB-siril-V4-g10.icc  sRGB-siril-V4-g22.icc
pixmaps/: meson.build  pixmap-list.mk
pixmaps/icons/: icon-list.mk
platform-specific/linux/: Makefile.am  meson.build  org.free_astro.siril.appdata.xml  org.siril.Siril.appdata.xml  org.siril.Siril.desktop  siril.xml
platform-specific/windows/: WindowsInnoSetup.iss.in  meson.build  siril.manifest  siril.rc.in
po/: LINGUAS  POTFILES.in  ar_DZ.po  ca.po  da.po  de.po  el.po  es_ES.po  fr.po  it_IT.po  ja_JP.po  ko_KR.po  meson.build  nl_BE.po  pl_PL.po  pt_BR.po  pt_PT.po  ru.po  tl_PH.po  uk.po  update_potfile.py  zh_CN.po  zh_TW.po
python_module/: MANIFEST.in  Makefile.am  README.md  meson.build  pyproject.toml  setup.py
python_module/locale/: README.md
python_module/siril/: __init__.py  commands.py  connection.py  exceptions.py  gui.py  models.py  plot.py  shm.py  tksiril.py  translations.py
python_module/sirilpy/: Makefile.am  __init__.py  connection.py  enums.py  exceptions.py  gpuhelper.py  models.py  plot.py  shm.py  sirilpy-list.mk  tksiril.py  translations.py  utility.py  version.py
src/: Makefile.am  git-version.h.in  global.c  main-cli.c  main.c  meson.build  siril_resource.h  siril_resource.xml  siril_resource_gtk4.xml
src/algos/: Def_Math.h  Def_Mem.h  Def_Wavelet.h  PSF.c  PSF.h  annotate.c  annotate.h  anscombe.c  anscombe.h  astrometry_solver.c  astrometry_solver.h  background_extraction.c  background_extraction.h  ccd-inspector.c  ccd-inspector.h  cie_standard_observer.h  colors.c  colors.h  comparison_stars.c  comparison_stars.h  cosmetic_correction.c  demosaicing.c  demosaicing.h  demosaicing_rtp.cpp  demosaicing_siril.c  extraction.c  extraction.h  fft.c  fitting.c  fitting.h  fix_xtrans_af.c  fix_xtrans_af.h  gaussian_blur.cc  gaussian_blur.h  geometry.c  geometry.h  gradient.c  hsluv.c  hsluv.h  io_wave.c  (+55 more)
src/compositing/: align_rgb.c  align_rgb.h  compositing.c  compositing.h  filters.c  filters.h
src/core/: FileSystemInfo.h  FileSystemInfo.m  OS_utils.c  OS_utils.h  arithm.c  arithm.h  command.c  command.h  command_def.h  command_extra.h  command_line_processor.c  command_line_processor.h  command_list.h  cut.c  cut.h  exif.cpp  exif.h  gtk_forward_decls.h  gui_calls.h  gui_iface.h  gui_iface_stubs.c  headless_stubs.c  icc_default_profiles.h  icc_profile.c  icc_profile.h  imoper.c  imoper.h  initfile.c  initfile.h  masks.c  masks.h  op_descriptor.c  op_descriptor.h  op_descriptors.def  op_descriptors.h  optimize_utils.h  pipe.c  pipe.h  portable_usleep.cpp  portable_usleep.h  (+47 more)
src/drizzle/: applydrizzle.c  cdrizzleapi.c  cdrizzleblot.c  cdrizzleblot.h  cdrizzlebox.c  cdrizzlebox.h  cdrizzlefileutils.c  cdrizzlemap.c  cdrizzlemap.h  cdrizzleutil.c  cdrizzleutil.h  driz_portability.h  imgmap.h
src/filters/: asinh.c  asinh.h  banding.c  banding.h  bilat.c  bilat.h  bm3d.cpp  bm3d_lib_transforms.cpp  bm3d_utilities.cpp  call_bm3d.cpp  call_bm3d.h  clahe.c  clahe.h  cosmetic_correction.c  cosmetic_correction.h  curve_transform.c  curve_transform.h  ddp.c  ddp.h  deconv.c  deconvolution.c  epf.c  epf.h  fft.c  fft.h  ght.c  ght.h  graxpert.c  graxpert.h  linear_match.c  linear_match.h  median.c  median.h  mtf.c  mtf.h  nlmdenoise.c  nlmdenoise.h  payne.c  payne.h  rgradient.c  (+13 more)
src/gui/: PSF_list.c  PSF_list.h  about_dialog.c  about_dialog.h  annotate.c  annotate.h  annotations_pref.c  annotations_pref.h  arithm.c  asinh.c  astrometry_solver.c  background_extraction.c  banding.c  bilateral.ui  bm3dgui.c  bm3dgui.h  callbacks.c  callbacks.h  catmag.c  catmag.h  ccd-inspector.c  ccd-inspector.h  clahe.c  colors.c  colors.h  compositing.c  compstars.c  compstars.h  conversion.c  cosmetic_correction.c  curves.c  curves.h  cut.c  cut.h  denoisegui.c  dialog_preview.c  dialog_preview.h  dialogs.c  dialogs.h  documentation.c  (+141 more)
src/gui-gtk4/: PSF_list.c  PSF_list.h  about_dialog.c  about_dialog.h  annotate.c  annotations_pref.c  annotations_pref.h  asinh.c  asinh.h  astrometry_solver.c  background_extraction.c  banding.c  callbacks.c  callbacks.h  catmag.c  ccd-inspector.c  clahe.c  clahe.h  colors.c  compositing.c  compstars.c  conversion.c  conversion.h  cosmetic_correction.c  curves.c  curves.h  cut.c  denoisegui.c  derotation.c  derotation.h  dialog_preview.c  dialog_preview.h  dialogs.c  dialogs.h  documentation.c  documentation.h  epf.c  fft.c  file_browser.c  file_browser.h  (+116 more)
src/io/: Astro-TIFF.c  Astro-TIFF.h  FITS_rename.c  FITS_rename.h  FITS_symlink.c  FITS_symlink.h  SirilJpegXLWrapper.cpp  SirilJpegXLWrapper.h  SirilXISFReader.cpp  SirilXISFReader.h  SirilXISFWraper.h  aavso_extended.c  aavso_extended.h  annotation_catalogues.c  annotation_catalogues.h  avi_preview.c  avi_preview.h  catalogues.c  catalogues.h  conversion.c  conversion.h  films.c  films.h  fits_keywords.c  fits_keywords.h  fits_sequence.c  fits_sequence.h  flis_compose.c  flis_compose.h  gitscripts.c  gitscripts.h  gnuplot_i.c  gnuplot_i.h  gps_parser.c  gps_parser.h  healpix.cpp  image_format_fits.c  image_format_fits.h  image_format_flis.c  image_format_flis.h  (+38 more)
src/livestacking/: gui.c  gui.h  livestacking.c  livestacking.h  ls_plot.c  ls_plot.h  noise.c  noise.h
src/opencv/: guidedfilter.cpp  opencv.cpp  opencv.h  tracks.cpp  tracks.h
src/pixelMath/: pixel_math_runner.c  pixel_math_runner.h  (+1 more)
(+702 files in other folders)
