# Build properties
option('gui',
 type : 'feature',
 value : 'enabled',
 description: 'build the GTK GUI (disable for a headless CLI-only build)'
)

option('gtk_version',
 type : 'combo',
 choices : ['gtk3', 'gtk4'],
 value : 'gtk3',
 description: 'GTK major version to build against (gtk3 or gtk4). The gtk4 backend lives in src/gui-gtk4 and is a parallel implementation; src/gui is the gtk3 default.'
)

option('relocatable-bundle',
 type: 'combo',
 value: 'platform-default',
 description: 'build with resources considered bundled under the same prefix',
 choices: [ 'yes', 'no', 'platform-default' ]
)

option('openmp',
 type : 'boolean',
 value : true,
 description: 'build with OpenMP support'
)

option('exiv2',
 type : 'boolean',
 value : true,
 description: 'build with exiv2 support'
)

option('libgit2',
 type : 'boolean',
 value : true,
 description: 'build with libgit2 git integration'
)

option('libraw',
 type : 'boolean',
 value : true,
 description: 'build with LibRaw support'
)

option('libtiff',
 type : 'boolean',
 value : true,
 description: 'build with TIFF support'
)

option('libjpeg',
 type : 'boolean',
 value : true,
 description: 'build with JPEG support'
)

option('libjxl',
 type : 'boolean',
 value : true,
 description: 'build with JPEG XL support'
)

option('libpng',
 type : 'boolean',
 value : true,
 description: 'build with PNG support'
)

option('libheif',
 type : 'boolean',
 value : true,
 description: 'build with HEIF support'
)

option('libXISF',
 type : 'boolean',
 value : true,
 description: 'build with XISF support'
)

option('ffms2',
 type : 'boolean',
 value : true,
 description: 'build with FFMS2 support'
)

option('ffmpeg',
 type : 'boolean',
 value : true,
 description: 'build with FFmpeg support'
)

option('libcurl',
 type: 'boolean',
 value: true,
 description: 'Use libcurl for web access',
)

option('sqlite',
 type: 'boolean',
 value: true,
 description: 'Use SQLite for caching online GAIA database',
)

option('criterion',
 type : 'boolean',
 value : false,
 description: 'build with criterion support'
)

option('arch_native',
 type : 'boolean',
 value : false,
 description : 'Enable -march=native optimization'
)

option('flatpak-id',
 type : 'string',
 value : '',
 description : 'set by flatpak-builder if building a flatpak'
)

option('simd_logs',
 type : 'boolean',
 value : false,
 description : 'Enable loop vectorization analysis during build (clang only)'
)

option('legacy-x11-support',
 type : 'boolean',
 value : true,
 description : 'GTK4 only: build the X11 drag-and-drop fallback that works around the upstream GTK X11 bug whereby gdk_drop_read_value_async never completes (see dnd-investigation.md). Pulls in libX11. Linux/BSD only — ignored on macOS/Windows.'
)
