################################################################################
# Meson file for data/*.csv
################################################################################


################################################################################
# Install

install_data(['messier.csv'
              ,'ngc.csv'
              ,'ic.csv'
              ,'ldn.csv'
              ,'sh2.csv'
              ,'stars.csv'
              , 'constellations.csv'
              , 'constellationsnames.csv'
              ],
             rename : ['catalogue/messier.csv'
                      ,'catalogue/ngc.csv'
                      ,'catalogue/ic.csv'
                      ,'catalogue/ldn.csv'
                      ,'catalogue/sh2.csv'
                      ,'catalogue/stars.csv'
                      , 'catalogue/constellations.csv'
                      , 'catalogue/constellationsnames.csv'
                      ],
             install_dir : siril_datadir)
