################################################################################
# Meson file for icc/*.icc
################################################################################


################################################################################
# Install

install_data(['Gray-siril-V2-g22.icc'
              ,'Gray-siril-V4-g10.icc'
              ,'Gray-siril-V4-g22.icc'
              ,'sRGB-siril-V2-g22.icc'
              ,'sRGB-siril-V4-g10.icc'
              ,'sRGB-siril-V4-g22.icc'
              ],
             rename : ['icc/Gray-siril-V2-g22.icc'
              ,'icc/Gray-siril-V4-g10.icc'
              ,'icc/Gray-siril-V4-g22.icc'
              ,'icc/sRGB-siril-V2-g22.icc'
              ,'icc/sRGB-siril-V4-g10.icc'
              ,'icc/sRGB-siril-V4-g22.icc'
              ],
             install_dir : siril_datadir)
