################################################################################
# Meson file for pictures/icons/logo
################################################################################

################################################################################
# List icons

siril_icons = [
  'astrometry.svg',
  'astrometry_dark.svg',
  'b.svg',
  'chain.svg',
  'CIE1931.png',
  'cm.svg',
  'curve.svg',
  'export_dark.svg',
  'export.svg',
  'eyedropper.svg',
  'eyedropper_dark.svg',
  'frame_dark.svg',
  'frame.svg',
  'framing-cog.svg',
  'framing-default.svg',
  'framing-max.svg',
  'framing-min.svg',
  'g.svg',
  'grid.svg',
  'histo.svg',
  'histo-orig.svg',
  'list.svg',
  'mirrorx_dark.svg',
  'mirrorx.svg',
  'mirrory_dark.svg',
  'mirrory.svg',
  'monochrome_dark.svg',
  'monochrome.svg',
  'mtf_dark.svg',
  'mtf.svg',
  'neg.svg',
  'photometry.svg',
  'photometry_dark.svg',
  'rotate-acw_dark.svg',
  'rotate-acw.svg',
  'rotate-cw_dark.svg',
  'rotate-cw.svg',
  'r.svg',
  'starfinder_dark.svg',
  'starfinder.svg',
  'sum_dark.svg',
  'sum.svg',
  'siril.svg',
  'tilt.svg',
  'tilt_dark.svg',
  'wcs-grid.svg',
  'wcs-grid_dark.svg',
]

################################################################################
# Install

install_subdir('icons/hicolor', install_dir : siril_share + '/icons')
install_data(siril_icons,
             install_dir : siril_datadir + '/pixmaps/' )
